--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           </div>
 
           <div class="hero-cta-row">
-            <a href="/iltizamk.html" class="btn-primary">
+            <a href="iltizamk.html" class="btn-primary">
               <span class="icon">🚀</span>
               <span>عرض لوحة مؤشر التزامك</span>
             </a>
