--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
   <header>
     <div class="logo">
       <div class="logo-icon">
-        <img src="/creative-logo.jpg" alt="Creative team logo" class="logo-img" />
+        <!-- تعديل مسار اللوقو لمسار نسبي -->
+        <img src="creative-logo.jpg" alt="Creative team logo" class="logo-img" />
       </div>
       <div>
         <div class="logo-text-main">هاكثون أبشر طويق</div>
@@ -205,6 +206,7 @@
           </div>
 
           <div class="hero-cta-row">
+            <!-- مسار نسبي للوحة المؤشر -->
             <a href="iltizamk.html" class="btn-primary">
               <span class="icon">🚀</span>
               <span>عرض لوحة مؤشر التزامك</span>
@@ -225,7 +227,7 @@
             <div class="mini-metric">
               <div class="mini-metric-label">المؤشر العام</div>
               <div class="mini-metric-value" style="color:#22c55e;">78</div>
-              <div class="mini-metric-tag">Good</div>
+              <div class="mini-metric-tag">جيّد</div>
             </div>
             <div class="mini-metric">
               <div class="mini-metric-label">المواعيد</div>
