--- a/iltizamk.html
+++ b/iltizamk.html
@@ -251,7 +251,8 @@
   <header>
     <div class="header-left">
       <div class="header-icon">
-        <img src="/creative-logo.jpg" alt="شعار فريق كريتيف" class="logo-img" />
+        <!-- مسار نسبي للّوقو -->
+        <img src="creative-logo.jpg" alt="شعار فريق كريتيف" class="logo-img" />
       </div>
       <div>
         <div class="header-title-main">لوحة مؤشر التزامك</div>
@@ -259,7 +260,8 @@
       </div>
     </div>
     <div class="header-right">
-      <a href="/index.html">الرجوع للواجهة الرئيسية</a>
+      <!-- مسار نسبي للواجهة الرئيسية -->
+      <a href="index.html">الرجوع للواجهة الرئيسية</a>
     </div>
   </header>
 
