--- a/iltizamk.html
+++ b/iltizamk.html
@@ -251,8 +251,8 @@
   <header>
     <div class="header-left">
       <div class="header-icon">
-        <!-- مسار نسبي للّوقو -->
-        <img src="creative-logo.jpg" alt="شعار فريق كريتيف" class="logo-img" />
+        <!-- مسار مناسب لـ GitHub Pages داخل مشروع Creative-Team -->
+        <img src="/Creative-Team/creative-logo.jpg" alt="شعار فريق كريتيف" class="logo-img" />
       </div>
       <div>
         <div class="header-title-main">لوحة مؤشر التزامك</div>
@@ -260,10 +260,11 @@
       </div>
     </div>
     <div class="header-right">
-      <!-- مسار نسبي للواجهة الرئيسية -->
-      <a href="index.html">الرجوع للواجهة الرئيسية</a>
+      <!-- يرجّع مباشرة لواجهة المشروع الرئيسية -->
+      <a href="/Creative-Team/">الرجوع للواجهة الرئيسية</a>
     </div>
   </header>
+
 
   <main class="shell">
     <section class="card">
